--- a/concordance-lines.ipynb
+++ b/concordance-lines.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -42,13 +42,14 @@
      "output_type": "stream",
      "text": [
       "Displaying 1 of 1 matches:\n",
-      "e way to get along in the world is to do things as well as you can. & amp ; am\n"
+      "e way to get along in the world is to do things as well as you can. & amp ; am\n",
+      "None\n"
      ]
     }
    ],
    "source": [
     "text = Text(tokens)\n",
-    "text.concordance('do')"
+    "print(text.concordance('do'))"
    ]
   },
   {
